# passeport

./: .gitignore  Cargo.toml  DERIVATION.md  LICENSE  MIGRATION.md  README.md  TODO.md
.github/workflows/: ci.yml  release.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_age_generate.rs  fuzz_derive_keys.rs  fuzz_ipfs_generate.rs  fuzz_mnemonic_to_seed.rs  fuzz_nostr_generate.rs  fuzz_onion_generate.rs  fuzz_pgp_fingerprint.rs  fuzz_pgp_generate.rs  fuzz_ssh_generate.rs
src/: agent.rs  cli.rs  commands.rs  derive.rs  error.rs  lib.rs  main.rs  mlock.rs  mnemonic.rs  prompt.rs  vault.rs
src/keys/: age.rs  ipfs.rs  mod.rs  nostr.rs  onion.rs  pgp.rs  ssh.rs
tests/: agent_tests.rs  integration.rs  vault_tests.rs  vectors.json  vectors.rs
